<resources>
    <string name="mapapikey">AIzaSyDPraQRuDWeIUxsjaCt_Q-l-MFe2snY2ds</string>
    <string name="app_name">Easy CASHAIER</string>
    <string name="phone">Phone</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="accept_terms_and_conditions">Accept Terms And Conditions</string>
    <string name="enter_verification_code_sent_to">Enter verification code sent to</string>
    <string name="confirm">confirm</string>
    <string name="resend">Resend</string>
    <string name="inv_code">Invalid Code</string>
    <string name="failed">Failed</string>
    <string name="wait">Wait</string>
    <string name="field_required">Field required</string>
    <string name="add_product">Add Product</string>
    <string name="bill_buy">Bill Buy</string>
    <string name="bill_sell">Bill Sell</string>
    <string name="suppliers">Suppliers</string>
    <string name="customers">Customers</string>
    <string name="expenses">Expenses</string>
    <string name="inquiries_and_reports">Inquiries and reports</string>
    <string name="products">Products</string>
    <string name="departments">Departments</string>
    <string name="stores">Stores</string>
    <string name="discounts">Discounts</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="you_do_not_have_any_products_to_add_an_item_click_the_button">You do not have any products to add an item, click the button (+)</string>
    <string name="you_do_not_have_any_expense_to_add_an_item_click_the_button">You do not have any Expenses to add an item, click the button (+)</string>
    <string name="you_do_not_have_any_sup_to_add_an_item_click_the_button">You do not have any Suppliers to add an item, click the button (+)</string>
    <string name="you_do_not_have_any_customer_to_add_an_item_click_the_button">You do not have any Customer to add an item, click the button (+)</string>
    <string name="search2">Search</string>
    <string name="department">Department</string>
    <string name="sell_b">Sell by</string>
    <string name="weight">Weight</string>
    <string name="unit">Unit</string>
    <string name="price">Price</string>
    <string name="the_cost">the cost</string>
    <string name="barcode">BarCode</string>
    <string name="inventory">Inventory</string>
    <string name="in_inventory">In Inventory</string>
    <string name="out_inventory">Out Inventory</string>
    <string name="display_at_the_point_of_sale">Display at the point of sale</string>
    <string name="color_and_shape">Color And Shape</string>
    <string name="photo">Photo</string>
    <string name="code_num">Code Num</string>
    <string name="choose_image">Choose Image</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="ch_department">Choose Department</string>
    <string name="ch_sell">Choose Sell By</string>
    <string name="ch_stoke">Choose Stoke</string>
    <string name="ch_color">Choose Color</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="you_do_not_have_any_department_to_add_an_item_click_the_button">You do not have any Department to add an item, click the button (+)</string>
    <string name="save">Save</string>
    <string name="department_name">Department Name</string>
    <string name="department_color">Department Color</string>
    <string name="discount_name">Discount Name</string>
    <string name="value">Value</string>
    <string name="add_department">Add Department</string>
    <string name="sar">SAR</string>
    <string name="ch_type">Choose Type</string>
    <string name="add_discount">Add Discount</string>
    <string name="you_do_not_have_any_discount_to_add_an_item_click_the_button">You do not have any Discount to add an item, click the button (+)</string>
    <string name="no_products_found">No Products Found</string>
    <string name="cart_empty">Cart Empty</string>
    <string name="pay">Pay</string>
    <string name="add_discount_coupon">Add Discount Coupon</string>
    <string name="cart1">cart</string>
    <string name="delete">Delete</string>
    <string name="total_bill">Total Bill</string>
    <string name="paid">Paid</string>
    <string name="stay">Stay</string>
    <string name="history">History</string>
    <string name="ch_customer">choose Customer</string>
    <string name="ch_account">Choose Account</string>
    <string name="ch_date">Choose Date</string>
    <string name="add_account">Add Account</string>
    <string name="welcome_to_the_cashier_app_please_wait_while_your_data_is_reviewed">Welcome to the cashier app. Please wait while your data is reviewed</string>
    <string name="profile">Profile</string>
    <string name="share">Share</string>
    <string name="add_user">Add User</string>
    <string name="logout">Logout</string>
    <string name="dont_have_permission">You Don,t Have Permission</string>
    <string name="something">Check internet connection</string>
    <string name="num">Num :</string>
    <string name="change_weight">Change Weight</string>
    <string name="add_customer">Add Customer</string>
    <string name="add_suppliers">Add Suppliers</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="address">Address</string>
    <string name="all_bill_sell">All Bill Sell</string>
    <string name="products_bill_sell">Products Bill Sell</string>
    <string name="sales_returns">Sales returns</string>
    <string name="products_bill_buy">Products Bill Buy</string>
    <string name="returned_purchases">Returned purchases</string>
    <string name="choose_department">Choose Department</string>
    <string name="add_cashier">Add Cashier</string>
    <string name="you_dont_have_any_bill_sell">You Dont Have Any Bill Sell</string>
    <string name="you_dont_have_any_bill_buy">You Dont Have Any Bill Buy</string>
    <string name="lanuage_setting">Language Setting</string>
    <string name="select_language">select Language</string>
    <string name="update">update</string>
    <string name="all_bill_buy">All Bill Buy</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="currency">Currency</string>
    <string name="upload_image">Upload image</string>
    <string name="select_image_to_upload">Select Image to Upload</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="tax_amount">Tax Amount</string>
    <string name="notifications">Notifications</string>
    <string name="ok">Ok</string>
    <string name="please_complete_profile_first">Please Complete Profile First</string>
    <string name="addtocartsucess">Add To Cart Successfuly</string>
    <string name="receipt">Receipt</string>
    <string name="print">Print</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="customer">Customer</string>
    <string name="casher">casher</string>
    <string name="time">Time</string>
    <string name="item">Item</string>
    <string name="amount">Amount</string>
    <string name="the_amount">The amount</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="amount_required">ِAmount Required</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="thanks_for_your_use">Thanks for your use</string>
    <string name="add_expenses">Add Expense</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="update_product">Update Product</string>
    <string name="paid_must_small_or">Paid Must Small Or Equal Total</string>
    <string name="update_discount">Update Discount</string>
    <string name="phone_aready_taken">Phone Already Taken</string>
    <string name="udate_department">Update Department</string>
    <string name="send_by_whats_app">share WhatsApp</string>
    <string name="update_expense">Update Expense</string>
    <string name="update_customer">Update Customer</string>
    <string name="update_supplier">Update Supplier</string>
    <string name="account_managment">Account Managment</string>
    <string name="aggregate_data">Aggregate data</string>
    <string name="overview">Overview</string>
    <string name="purchases">Purchases</string>
    <string name="day">TodDay</string>
    <string name="total_purchases">Total purchases</string>
    <string name="total_amounts_paid">Total amounts paid</string>
    <string name="total_amounts_remaining_to_suppliers">Total amounts remaining to suppliers</string>
    <string name="extent_of_work">Extent of work</string>
    <string name="custom_history">Custom History</string>
    <string name="yesterday">YesterDay</string>
    <string name="last_seven_day">Last Seven Day</string>
    <string name="this_month">This Month</string>
    <string name="last_thirty_day">Last Thirty Day</string>
    <string name="last_month">Last Month</string>
    <string name="total_sales">Total sales</string>
    <string name="total_discount">Total Discount</string>
    <string name="total_sales_after_discount">Total Sales After Discount</string>
    <string name="total_cash_revenue">Total cash revenue</string>
    <string name="total_amounts_remaining_at_customers">Total amounts remaining at customers</string>
    <string name="total_profits">Total profits</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="total_profits_after_deducting_expenses">Total profits after deducting expenses</string>
    <string name="profit_ratio">Profit ratio</string>
    <string name="sales">Sales</string>
    <string name="earn">Earn</string>
    <string name="most_sale">Most Sale Products</string>
    <string name="contact_us">Contact Us</string>
    <string name="whats_app">whats App</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="instegram">Instegram</string>
    <string name="telegram">Telegram</string>
    <string name="youtube">Youtube</string>
    <string name="server_error">Server Error</string>
    <string name="contactus">ContactUs</string>
    <string name="detailed_sales_report">Detailed sales report</string>
    <string name="store">Store</string>
    <string name="an_aggregate_sales_report">An aggregate sales report</string>
    <string name="report_of_unpaid_sales_invoices">Report of unpaid sales invoices</string>
    <string name="sales_invoices">Sales invoices</string>
    <string name="detailed_earnings_report">Detailed earnings report</string>
    <string name="aggregate_earnings_report">Aggregate earnings report</string>
    <string name="product_profit_rate">Product profit rate</string>
    <string name="report_of_the_amounts_left_over_for_customers">Report of the amounts left over for customers</string>
    <string name="client_bills">Client bills</string>
    <string name="report_of_products_sold_to_a_customer">Report of products sold to a customer</string>
    <string name="report_of_the_remaining_amounts_to_suppliers">Report of the remaining amounts to suppliers</string>
    <string name="supplier_invoices">Supplier invoices</string>
    <string name="report_of_products_purchased_from_a_supplier">Report of products purchased from a supplier</string>
    <string name="detailed_purchase_report">Detailed purchase report</string>
    <string name="an_aggregate_purchase_report">An aggregate purchase report</string>
    <string name="report_of_unpaid_purchases_invoices">Report of unpaid purchases invoices</string>
    <string name="purchase_bills">Purchase bills</string>
    <string name="no_data_to_show">No Data To Show</string>
    <string name="enter_product_name">ُEnter Product Name</string>
    <string name="product">Product</string>
    <string name="alert">Alert</string>
    <string name="dismiss">Dismiss</string>
</resources>