<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:text="@string/alert"
            />
        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@color/transparent"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_11sdp"
            android:text="@string/update"
            />
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:textColor="@color/bpRed"
            android:textSize="@dimen/_11sdp"
            android:text="@string/delete"
            />

        <TextView
            android:id="@+id/tvDismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:text="@string/dismiss"
            android:layout_marginTop="@dimen/_5sdp"
            />
    </LinearLayout>
</layout>