<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="lang"
            type="String"

            />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@color/white"
                    app:contentInsetEnd="0dp"
                    app:contentInsetStart="0dp">

                    <LinearLayout
                        android:id="@+id/llBack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <Space
                            android:layout_width="16dp"
                            android:layout_height="0dp" />

                        <ImageView
                            android:id="@+id/imageBack"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_vertical"
                            android:padding="3dp"
                            android:rotation='@{lang.equals("ar")?180:0}'
                            android:src="@drawable/ic_arrow_left"
                            app:tint="@color/colorPrimary" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:clickable="false"
                            android:longClickable="false"
                            android:singleLine="true"
                            android:text="@string/an_aggregate_purchase_report"
                            android:textColor="@color/black"
                            android:textSize="18sp"

                            />

                    </LinearLayout>

                </androidx.appcompat.widget.Toolbar>

                <LinearLayout
                    android:id="@+id/llSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/rounded_empty"
                        android:clickable="true"
                        android:focusable="true"

                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:weightSum="3"

                        >


                        <EditText
                            android:id="@+id/edtSearch"
                            android:layout_width="0dp"
                            android:layout_height="35dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="3"
                            android:background="@color/white"
                            android:clickable="true"
                            android:focusable="true"
                            android:hint="@string/enter_product_name"
                            android:imeOptions="actionSearch"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:scrollHorizontally="true"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            tools:ignore="RtlCompat" />


                    </LinearLayout>

                </LinearLayout>

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:layout_margin="@dimen/_8sdp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <TextView

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                />
            <TextView

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@string/amount"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:layout_weight="1"
                android:gravity="center"
                />
            <TextView

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@string/price"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"


                />

        </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
    </LinearLayout>
</androidx.cardview.widget.CardView>


            </LinearLayout>

            <ProgressBar
                android:id="@+id/progBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvNoData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_data_to_show"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:visibility="gone" />

            <FrameLayout
                android:id="@+id/flfilter"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:clickable="true"
                android:focusable="true"
                android:visibility="gone">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="0dp"
                    app:contentPadding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_8sdp"

                            android:gravity="center"
                            android:text="@string/day"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp" />

                        <TextView
                            android:id="@+id/tvyday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_8sdp"

                            android:gravity="center"
                            android:text="@string/yesterday"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp" />

                        <TextView
                            android:id="@+id/tvlsevday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_8sdp"

                            android:gravity="center"
                            android:text="@string/last_seven_day"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp" />

                        <TextView
                            android:id="@+id/tvthismonth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:gravity="center"
                            android:text="@string/this_month"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp" />

                        <TextView
                            android:id="@+id/tvlthrityday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:gravity="center"
                            android:text="@string/last_thirty_day"

                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp" />

                        <TextView
                            android:id="@+id/tvlmonth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_marginTop="@dimen/_8sdp"
                            android:gravity="center"
                            android:text="@string/last_month"

                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp" />

                        <TextView
                            android:id="@+id/tvextentofwork"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_marginTop="@dimen/_8sdp"
                            android:gravity="center"

                            android:text="@string/extent_of_work"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp" />

                        <TextView
                            android:id="@+id/tvcustom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_marginTop="@dimen/_8sdp"
                            android:gravity="center"
                            android:text="@string/custom_history"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </FrameLayout>

        </FrameLayout>
        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_10sdp"
            >

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@drawable/rounded_primary"
                android:gravity="center"
                android:text="@string/print"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp" />

            <Button
                android:id="@+id/btnsend"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@drawable/rounded_primary"
                android:gravity="center"
                android:text="@string/send_by_whats_app"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/fl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/colorPrimary"
            android:padding="@dimen/_4sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">

                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_gravity="center_vertical"
                    android:clickable="false"
                    android:longClickable="false"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/ic_down_arrow"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:gravity="center"
                    android:text="@string/day"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:layout_gravity="end|center_vertical"
                        android:clickable="false"
                        android:longClickable="false"
                        android:padding="@dimen/_3sdp"
                        android:src="@drawable/ic_calendar"
                        app:tint="@color/white" />
                </FrameLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</layout>