<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/small_stroke"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:singleLine="true"
            android:layout_weight=".3"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:text="#"

            />
        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:background="@color/gray4"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:text="@string/store"
            android:singleLine="true"

            />
        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:background="@color/gray4"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:text="@string/product"
            android:singleLine="true"

            />
        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:background="@color/gray4"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight=".6"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:text="@string/amount"
            android:singleLine="true"
            />
        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:background="@color/gray4"
            />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight=".3"
            android:src="@drawable/ic_edit"
            android:padding="@dimen/_6sdp"
            />
    </LinearLayout>

</layout>